--- a/single_choice_english.ipynb
+++ b/single_choice_english.ipynb
@@ -2,217 +2,187 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose the right word to fill the gap in the following sentence:\n",
       "1. Human intervention by mitigating greenhouse gas emission can be possibly the last resort to help _______ climate change.\n",
       "A. ameliorate     B. amend     C. promote     D. aggravate\n",
       "\n",
       "GPT-3: A. ameliorate\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "2. She has been in poor condition and is coming to England for rest and _____ for the first time.\n",
       "A. illumination    B. recuperation     C. implication     D. connotation\n",
       "\n",
       "GPT-3: B. recuperation\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "3. It’s reported that the flame of racial tension in that region was ______ by a speech make by the spokesman of the local government.\n",
       "A. executed       B. excavated      C. exacerbated      D. expatriated\n",
       "\n",
       "GPT-3: C. exacerbated\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "4. One of the conditions of ______ is that you must keep on producing something creative.\n",
       "A. possession     B. tendency       C. support      D. tenure\n",
       "\n",
-      "GPT-3: D. tenure\n",
+      "GPT-3: D. Tenure\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "5. Knowing the six stumbling blocks is certainly a help in avoiding them, but these particular ones cannot be easily ______.\n",
       "A. permeated     B. circumvented      C. depleted     D. cemented\n",
       "\n",
       "GPT-3: B. circumvented\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "6. Situated between the Berkeley Hills and the San Francisco Bay, Richmond is a densely populated community predominated largely by people of color, high unemployment and a large _______ population.\n",
       "A. transient      B. permanent      C. superficial      D. marginal\n",
       "\n",
-      "GPT-3: B. permanent\n",
+      "GPT-3: A. transient\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "7. In Mexico, the government _______ the equivalent of 0.85 percent of the total budget in 2003 for programs promoting gender equity.\n",
       "A. encroached     B. infested      C. divulged      D. earmarked\n",
       "\n",
       "GPT-3: D. earmarked\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "8. At least four people have been arrested in Iran for trying to _______ a nuclear site, an Iranian official was quoted by Iranian media as saying on Sunday.\n",
       "A. subsidize      B. sabotage      C. sacrifice      D. safeguard\n",
       "\n",
       "GPT-3: B. sabotage\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "9. Farmers are encouraged to develop a shareholding system from which they can realize benefits. Meanwhile, they can also sell a share or take it as _______ or warranty.\n",
       "A. collateral      B. cooperatives       C. cement      D. crockpot\n",
       "\n",
       "GPT-3: A. collateral\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "10. It’s an unusually _______ cancer of white blood cells that are overproduced in the bone and invade other parts of the body.\n",
       "A. confounded      B. impervious      C. virulent      D. sibilant\n",
       "\n",
       "GPT-3: C. virulent\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "11. For years, he has made _______ calls or visits with members of his congregation to the widows or families of deceased officers.\n",
       "A. impervious      B. condolence       C. sympathy      D. perverse\n",
       "\n",
       "GPT-3: B. condolence\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "12. The potential demands for development of networked education in less-developed regions are great, but the educational revenue is insufficient, and the ______ of networked education is behind.\n",
       "A. infrastructure      B. content      C. pattern      D. valance\n",
       "\n",
       "GPT-3: A. infrastructure\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "13. In submarine works, the workman, clad in an ______ dress, with his head in a metal helmet, receives air from above by means of forcing pumps and regulators.\n",
       "A. inscrutable     B. inflectional     C. ambiguity     D. impervious\n",
       "\n",
       "GPT-3: D. impervious\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "14. A good education should train students to think by themselves. However, most of them are trained in the technique of examination under ______.\n",
       "A. transaction       B. displace      C. duress      D. obligation\n",
       "\n",
       "GPT-3: C. duress\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "15. The choice of household and industrial waste disposal was between tipping and _______.\n",
       "A. sewage      B. incineration      C. afforestation      D. recruitment\n",
       "\n",
-      "GPT-3: B. Incineration\n",
+      "GPT-3: B. incineration\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "16. The policy by EU that imposes serious constraints on textile imports from China will definitely ______ the bilateral trade in other areas.\n",
       "A. entail       B. optimize       C. thwart        D. warrant\n",
       "\n",
       "GPT-3: C. thwart\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "17. Official figures or estimates are not publicly available, but ______ evidence suggests that immigration is rising.\n",
       "A. anecdotal      B. aggregate      C. abortion      D. anthropogenic\n",
       "\n",
       "GPT-3: A. anecdotal\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "18. In his striving for wealth, power, or sexual satisfaction, he reverts to his true animal nature, and the ______ of civilization falls away.\n",
       "A. fame        B. façade        C. facility        D. faculty\n",
       "\n",
       "GPT-3: B. façade\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "19. The state grants ______ treatment to outstanding athletes in their employment and enrollment for schools.\n",
       "A. referential      B. inferential      C. preferential      D. deferential\n",
       "\n",
       "GPT-3: C. preferential\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "20. Yet the World Development Report suggests that the main ______ on development these days may not be a poverty trap but a violent one.\n",
       "A. reservation      B. suppression      C. repression      D. constraint\n",
       "\n",
       "GPT-3: C. Repression\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "21. If a public school celebrates only Christmas in December, it can ______ students who aren’t Christian.\n",
       "A. marginalize      B. facilitate      C. immerse      D. profile\n",
       "\n",
       "GPT-3: A. marginalize\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "22. We humans appear to be meaning-seeking creatures that have the misfortune to be thrown into a world devoid of ______ meaning.\n",
       "A. extrinsic       B. intrinsic       C. external       D. internal\n",
       "\n",
       "GPT-3: B. intrinsic\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "23. For more about the Trump administration’s steel and aluminum tariffs, watch Fortune’s video: Trump dangled a permanent exemption as _______ to reach a tentative NAFTA deal, though talks continue with no immediate agreement in sight.\n",
       "A. interplay      B. perception      C. rationale      D. incentive\n",
       "\n",
       "GPT-3: D. incentive\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "24. Millennium’s drug, now in early human trials, homes in on prostate cancer cells and aims to ______ them with a precise dose of toxic chemotherapy while leaving surrounding tissue untouched.\n",
       "A. obstruct      B. encroach      C. obliterate      D. remit\n",
       "\n",
       "GPT-3: C. obliterate\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "25. Such systems could be targeted through unauthorized ______, attacks, worms, Trojan horse programs, or malicious insiders.\n",
       "A. intrusions     B. inheritance     C. interruptions     D. indentations\n",
       "\n",
       "GPT-3: A. intrusions\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "26. ______ is usually associated with a slacker mentality: a cold, dispassionate, uninterested apathetic, even condescending attitude toward life and others.\n",
       "A. Preconception     B. Stereotype     C. Detachment     D. Scrutiny\n",
       "\n",
       "GPT-3: B. Stereotype\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "27. A researcher said self- _____ is a risky form of humor because it can draw attention to one’s real shortcomings, and it is “not for everyone”.\n",
       "A. dispensation     B. deprecation     C. temerity     D. distortion\n",
       "\n",
-      "GPT-3: B. deprecation\n",
+      "GPT-3: B. Deprecation\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "28. The investment in real estate ______ a high risk, however, a lot of people refused to give it up.\n",
       "A. entailed     B. divulged     C. backfired     D. whined\n",
       "\n",
       "GPT-3: A. entailed\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "29. Stronger enforcement of regulations would act as a ______ and help reduce corruption levels.\n",
       "A. pester     B. equity     C. arousal     D. deterrent\n",
       "\n",
       "GPT-3: D. deterrent\n",
       "\n",
       "\n",
-      "Choose the right word to fill the gap in the following sentence:\n",
       "30. Development is not ______ over the long run if it comes at the cost of degrading the environment. We believe that development done in the right way actually improves the quality of the environment.\n",
       "A. accessible     B. cardinal     C. sustainable     D. vulnerable\n",
       "\n",
@@ -224,7 +194,6 @@
    ],
    "source": [
     "import os\n",
-    "import sys\n",
     "import openai\n",
     "\n",
     "question_file = \"single_choice_english.txt\"\n",
@@ -234,15 +203,10 @@
     "\n",
     "\n",
     "def ask_question (text):\n",
-    "    \n",
-    "    instruction = \"Choose the right word to fill the gap in the following sentence:\\n\"\n",
-    "    my_prompt = instruction + text\n",
-    "\n",
-    "    print (my_prompt)\n",
-    "\n",
+    "    prompt = f\"Choose the best option to fill the gap in the following sentence:\\n\\n{text}\"\n",
     "    response = openai.Completion.create(\n",
     "        engine=\"text-davinci-002\",\n",
-    "        prompt=my_prompt,\n",
+    "        prompt=prompt,\n",
     "        temperature=0.7,\n",
     "        max_tokens=256,\n",
     "        top_p=1,\n",
@@ -261,8 +225,8 @@
     "        if line.startswith(\"A\"):\n",
     "            \n",
     "            res = ask_question(content)\n",
-    "\n",
-    "            print(f\"GPT-3: {res}\\n\\n\")\n",
+    "            print (content)\n",
+    "            print (f\"GPT-3: {res}\\n\\n\")\n",
     "\n",
     "            content = \"\"\n",
     "\n",
