--- a/single_choice_english.ipynb
+++ b/single_choice_english.ipynb
@@ -235,6 +235,179 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31. The main theme of the reading is_________.\n",
+      "A. values and attitudes toward work\n",
+      "B. the employer-employee relationships\n",
+      "C. materialism and competition in the work world\n",
+      "D. the relationship between work and relaxation\n",
+      "\n",
+      "GPT-3: A. values and attitudes toward work\n",
+      "\n",
+      "\n",
+      "32. One outcome of the “ work ethic” is a concern with_________.\n",
+      "A. spiritualism     B. materialism     C. religion     D. opportunities\n",
+      "33. The “American Dream” is the belief that______.\n",
+      "A. honesty and luck are American characteristics\n",
+      "B. all hard-working individuals will end up wearing rags\n",
+      "C. any individual can achieve wealth\n",
+      "D. “rags-to-riches” stories are not real\n",
+      "\n",
+      "GPT-3: B. materialism\n",
+      "\n",
+      "\n",
+      "34．The author states that workaholics _______.\n",
+      "A. abuse themselves physically and mentally\n",
+      "B. are highly productive members of society\n",
+      "C. are somewhat like slaves to work\n",
+      "D. both A and B\n",
+      "\n",
+      "GPT-3: D. both A and B\n",
+      "\n",
+      "\n",
+      "35. Why have some people begun to place less emphasis on work and more on non- work activities?\n",
+      "A. They realize that having friends is not as necessary as working.\n",
+      "B. They realize that excessive work demands can be harmful to their health.\n",
+      "C. They realize that work is not useful.\n",
+      "D. They realize that work should be placed in secondary place compared with relaxation.\n",
+      "\n",
+      "GPT-3: B. They realize that excessive work demands can be harmful to their health.\n",
+      "\n",
+      "\n",
+      "36. Why don’t some people socialize with their co-workers on the job?\n",
+      "A. They consider work and play separate activities.\n",
+      "B. They have nothing in common with their fellow workers.\n",
+      "C. They feel that socializing with them will create problems at home.\n",
+      "D. They feel that socializing with them will create problems at workplace.\n",
+      "\n",
+      "GPT-3: A. They consider work and play separate activities.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Passage 2\n",
+      "37. The author unexpectedly learned important lessons from ______.\n",
+      "A. his experience as a corporate-executive\n",
+      "B. working with a successful business\n",
+      "C. his visit to the rain forest\n",
+      "D. his company’s impacts on the environment\n",
+      "\n",
+      "GPT-3: C. his visit to the rain forest\n",
+      "\n",
+      "\n",
+      "38. The author thinks that saving the environment is a business opportunity in that____. A. many new products can be developed as substitutes for forest products\n",
+      "B. creativity and technology can be applied in order to save resources\n",
+      "C. people’s potential for creativity can be tapped to its full\n",
+      "D. companies can make a lot of money during the process\n",
+      "\n",
+      "GPT-3: B. creativity and technology can be applied in order to save resources\n",
+      "\n",
+      "\n",
+      "39. To model Mitsubishi Electric on a rain forest, the author’s idea is that the company should ____.\n",
+      "A. learn to be as adaptable as a rain forest\n",
+      "B. consume no resources of its own\n",
+      "C. be as productive as a rain forest\n",
+      "D. use all its wastes\n",
+      "\n",
+      "GPT-3: A. learn to be as adaptable as a rain forest.\n",
+      "\n",
+      "\n",
+      "40. In the author’s opinion, people have been looking at the rain forest all wrong without realizing that the rain forest_____.\n",
+      "A. is more valuable than we think it is\n",
+      "B. has its own unique design principles\n",
+      "C. has far more biodiversity than we believe\n",
+      "D. has a wide variety of trees that people can see\n",
+      "\n",
+      "GPT-3: B. has its own unique design principles.\n",
+      "\n",
+      "\n",
+      "41. A company can survive in this highly competitive economy by _____.\n",
+      "A. reducing the number of its employees\n",
+      "B. cutting its costs as much as possible\n",
+      "C. developing unique products\n",
+      "D. defeating its competitors\n",
+      "\n",
+      "GPT-3: C. developing unique products\n",
+      "\n",
+      "\n",
+      "42. The author does not consider competitiveness as the key to success in today’s world because ______.\n",
+      "A. competition is no longer as sharp as it used to be\n",
+      "B. it is now more difficult to acquire other companies\n",
+      "C. being independent ensures the success of a company\n",
+      "D. cooperative joint ventures will benefit all the partners\n",
+      "\n",
+      "GPT-3: D. cooperative joint ventures will benefit all the partners\n",
+      "\n",
+      "\n",
+      "43. To be a good fit, a business should try to _____.\n",
+      "A. maximize its prof            B. identify social problems\n",
+      "C. defeat the others             D. fulfill social needs\n",
+      "44. According to the author, the most important thing for a business is ______.\n",
+      "A. survival and excellence in everything       B. social responsibility\n",
+      "C. high economic returns                   D. efficient management\n",
+      "45. Which one of the following can best serve as a title for the whole passage?\n",
+      "A. Competition and cooperation\n",
+      "B. Social responsibility and business development\n",
+      "C. Business lessons from the rain forest\n",
+      "D. How can a company survive in a competitive world\n",
+      "\n",
+      "GPT-3: C. Business lessons from the rain Forest\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import openai\n",
+    "\n",
+    "question_file = \"reading_comprehension.txt\"\n",
+    "\n",
+    "\n",
+    "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "\n",
+    "\n",
+    "def ask_question (text):\n",
+    "    prompt = f\"Choose the best option to  according to the text:\\n\\n{text}\"\n",
+    "    response = openai.Completion.create(\n",
+    "        engine=\"text-davinci-002\",\n",
+    "        prompt=prompt,\n",
+    "        temperature=0.7,\n",
+    "        max_tokens=256,\n",
+    "        top_p=1,\n",
+    "        frequency_penalty=0,\n",
+    "        presence_penalty=0\n",
+    "    )\n",
+    "\n",
+    "    return response.choices[0].text.lstrip()\n",
+    "\n",
+    "with open(question_file, 'r', encoding='utf-8') as file_in:\n",
+    "    article = \"\"\n",
+    "    content = \"\"\n",
+    "    for line in file_in:\n",
+    "        if line.startswith(\"　\"):\n",
+    "            article += line.lstrip()\n",
+    "        else:\n",
+    "            line = line.strip()\n",
+    "            content += line + \"\\n\"\n",
+    "            if line.startswith(\"D\"):\n",
+    "                \n",
+    "                res = ask_question(article + \"\\n\" + content)\n",
+    "                print (content)\n",
+    "                print (f\"GPT-3: {res}\\n\\n\")\n",
+    "\n",
+    "                content = \"\"\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
