--- a/single_choice_english.ipynb
+++ b/single_choice_english.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -252,14 +252,21 @@
       "\n",
       "\n",
       "32. One outcome of the “ work ethic” is a concern with_________.\n",
-      "A. spiritualism     B. materialism     C. religion     D. opportunities\n",
+      "A. spiritualism\n",
+      "B. materialism\n",
+      "C. religion\n",
+      "D. opportunities\n",
+      "\n",
+      "GPT-3: B. materialism\n",
+      "\n",
+      "\n",
       "33. The “American Dream” is the belief that______.\n",
       "A. honesty and luck are American characteristics\n",
       "B. all hard-working individuals will end up wearing rags\n",
       "C. any individual can achieve wealth\n",
       "D. “rags-to-riches” stories are not real\n",
       "\n",
-      "GPT-3: B. materialism\n",
+      "GPT-3: C. any individual can achieve wealth\n",
       "\n",
       "\n",
       "34．The author states that workaholics _______.\n",
@@ -290,7 +297,7 @@
       "\n",
       "\n",
       "\n",
-      "Passage 2\n",
+      "\n",
       "37. The author unexpectedly learned important lessons from ______.\n",
       "A. his experience as a corporate-executive\n",
       "B. working with a successful business\n",
@@ -300,7 +307,8 @@
       "GPT-3: C. his visit to the rain forest\n",
       "\n",
       "\n",
-      "38. The author thinks that saving the environment is a business opportunity in that____. A. many new products can be developed as substitutes for forest products\n",
+      "38. The author thinks that saving the environment is a business opportunity in that____.\n",
+      "A. many new products can be developed as substitutes for forest products\n",
       "B. creativity and technology can be applied in order to save resources\n",
       "C. people’s potential for creativity can be tapped to its full\n",
       "D. companies can make a lot of money during the process\n",
@@ -314,7 +322,7 @@
       "C. be as productive as a rain forest\n",
       "D. use all its wastes\n",
       "\n",
-      "GPT-3: A. learn to be as adaptable as a rain forest.\n",
+      "GPT-3: A. learn to be as adaptable as a rain forest\n",
       "\n",
       "\n",
       "40. In the author’s opinion, people have been looking at the rain forest all wrong without realizing that the rain forest_____.\n",
@@ -323,7 +331,7 @@
       "C. has far more biodiversity than we believe\n",
       "D. has a wide variety of trees that people can see\n",
       "\n",
-      "GPT-3: B. has its own unique design principles.\n",
+      "GPT-3: B. has its own unique design principles\n",
       "\n",
       "\n",
       "41. A company can survive in this highly competitive economy by _____.\n",
@@ -345,18 +353,30 @@
       "\n",
       "\n",
       "43. To be a good fit, a business should try to _____.\n",
-      "A. maximize its prof            B. identify social problems\n",
-      "C. defeat the others             D. fulfill social needs\n",
+      "A. maximize its prof\n",
+      "B. identify social problems\n",
+      "C. defeat the others\n",
+      "D. fulfill social needs\n",
+      "\n",
+      "GPT-3: D. fulfill social needs\n",
+      "\n",
+      "\n",
       "44. According to the author, the most important thing for a business is ______.\n",
-      "A. survival and excellence in everything       B. social responsibility\n",
-      "C. high economic returns                   D. efficient management\n",
+      "A. survival and excellence in everything\n",
+      "B. social responsibility\n",
+      "C. high economic returns\n",
+      "D. efficient management\n",
+      "\n",
+      "GPT-3: B. Social responsibility\n",
+      "\n",
+      "\n",
       "45. Which one of the following can best serve as a title for the whole passage?\n",
       "A. Competition and cooperation\n",
       "B. Social responsibility and business development\n",
       "C. Business lessons from the rain forest\n",
       "D. How can a company survive in a competitive world\n",
       "\n",
-      "GPT-3: C. Business lessons from the rain Forest\n",
+      "GPT-3: C. Business lessons from the rain forest\n",
       "\n",
       "\n"
      ]
