change the message

--- a/single_choice_english.ipynb
+++ b/single_choice_english.ipynb
@@ -393,7 +393,7 @@
     "\n",
     "\n",
     "def ask_question (text):\n",
-    "    prompt = f\"Choose the best option to  according to the text:\\n\\n{text}\"\n",
+    "    prompt = f\"Choose the best option according to the text:\\n\\n{text}\"\n",
     "    response = openai.Completion.create(\n",
     "        engine=\"text-davinci-002\",\n",
     "        prompt=prompt,\n",
