--- a/single_choice_english.ipynb
+++ b/single_choice_english.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
       "C. materialism and competition in the work world\n",
       "D. the relationship between work and relaxation\n",
       "\n",
-      "GPT-3: A. values and attitudes toward work\n",
+      "GPT-3: A. Values and attitudes toward work.\n",
       "\n",
       "\n",
       "32. One outcome of the “ work ethic” is a concern with_________.\n",
@@ -266,7 +266,7 @@
       "C. any individual can achieve wealth\n",
       "D. “rags-to-riches” stories are not real\n",
       "\n",
-      "GPT-3: C. any individual can achieve wealth\n",
+      "GPT-3: C. Any individual can achieve wealth.\n",
       "\n",
       "\n",
       "34．The author states that workaholics _______.\n",
@@ -275,7 +275,7 @@
       "C. are somewhat like slaves to work\n",
       "D. both A and B\n",
       "\n",
-      "GPT-3: D. both A and B\n",
+      "GPT-3: B. are highly productive members of society\n",
       "\n",
       "\n",
       "35. Why have some people begun to place less emphasis on work and more on non- work activities?\n",
@@ -367,7 +367,7 @@
       "C. high economic returns\n",
       "D. efficient management\n",
       "\n",
-      "GPT-3: B. Social responsibility\n",
+      "GPT-3: B. social responsibility\n",
       "\n",
       "\n",
       "45. Which one of the following can best serve as a title for the whole passage?\n",
